# WarpBootstrapCompiler1

./: .gitignore  2  CMakeLists.txt  LICENSE.md  NOTICE  NoKillDoNoHarmLicenseSummery.md  README.md  \  conanfile.txt  test_3_select_alternative.ll
Compiler/: Compile.cpp  FunctionParser.cpp  Main.cpp
Include/Warp/: BuildTest.hpp  Common.hpp  SyntaxAnalysis.hpp  Utilities.hpp
Include/Warp/Cache/: FunctionParser.hpp
Include/Warp/Parsing/: BooleanExpressions.hpp  FunctionDeclarations.hpp  GeneralTermTags.hpp  MathematicalExpressions.hpp  Numbers.hpp  NumericLiterals.hpp  TermWrappers.hpp  Terms.hpp  TypeTerms.hpp  WarpTerms.hpp
Include/Warp/Runtime/: Compiler.hpp
Include/Warp/Runtime/Compiler/: Alternative.hpp  AlternativePrototype.hpp  Constant.hpp  Constraint.hpp  Context.hpp  Frame.hpp  Function.hpp  NumericType.hpp  SimpleExecutor.hpp  SingleParameter.hpp  TranslationUnit.hpp
Include/Warp/SyntaxAnalysis/: Call.hpp  Expression.hpp  LogicalExpression.hpp  MathematicalExpressions.hpp  NumericLiterals.hpp  SyntaxNode.hpp  SyntaxTree.hpp
Include/Warp/SyntaxTranslation/LLVM/: Compile.hpp
Include/Warp/SyntaxTranslation/LLVM/Translators/: ConstantCall.hpp  FunctionCall.hpp  FunctionDeclaration.hpp  LiteralTranslator.hpp  MathematicalExpressions.hpp
Include/Warp/Testing/: ConstantTests.hpp  Enable.hpp  ParseTestingUtilities.hpp  TestParser.hpp
Include/Warp/Utilities/: Any.hpp  ArrayView.hpp  AutoVariant.hpp  ConstantVector.hpp  Conversions.hpp  Decimal.hpp  FixedPoint.hpp  FixedPointNumber.hpp  Logging.hpp  Math.hpp  MovingVector.hpp  Reflection.hpp  Strings.hpp  TemplateUtilities.hpp  Templates.hpp  TypeHash.hpp  VariantView.hpp
Old/: NotSoUniquePointer.hpp  OrTerm.hpp
Source/: AutoVariant.cpp  BuildTest.cpp
Source/Cache/: BooleanExpressionsCache.cpp  FunctionDeclarationsCache.cpp  MathematicalExpressionsCache.cpp  NumericLiteralsCache.cpp  TypeTermsCache.cpp
Source/SyntaxNodes/: Call.cpp  LogicalExpression.cpp  MathematicalExpressions.cpp  NumericLiterals.cpp
Test/: ArrayView.cpp  BooleanExpressions.cpp  Conversions.cpp  Decimal.cpp  FunctionDeclarations.cpp  Main.cpp  Math.cpp  MathematicalExpressions.cpp  MathematicalExpressions.hpp  MathematicalExpressionsCache.cpp  Numbers.cpp  NumericLiterals.cpp  Terms.cpp
TestLLVM/: build_test.sh  test_0_select_alternative  test_0_select_alternative.cpp  test_0_select_alternative.ll  test_0_select_alternative.s  test_1_select_alternative  test_1_select_alternative.cpp  test_1_select_alternative.ll  test_1_select_alternative.s  test_2_select_alternative  test_2_select_alternative.ll  test_2_select_alternative.s  test_3_select_alternative  test_3_select_alternative.ll  test_3_select_alternative.s  test_4_select_alternative  test_4_select_alternative.cpp  test_4_select_alternative.ll  test_4_select_alternative.s  test_4_select_alternative_run  test_4_select_alternative_run.cpp
Tester/: Main.cpp
Tools/StackLogger/: ParseStackTracer.cpp
Warp/: FactorialCallTest0.cpp  FunctionCallTest0.warp  Test0  Test0.cpp  Test0.warp  Test1.warp  Test2.warp  TestMain0  TestMain1.warp  TestWithDataTypes
compilerbuild/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  buildalarm.py  cmake_install.cmake  compile_commands.json  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json  mk  output.cpp
trace/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
